@@ -4,14 +4,13 @@ import com.google.gson.*;
 import net.minecraft.server.level.ServerPlayer;
 import org.slf4j.Logger;
 import com.mojang.logging.LogUtils;
-import com.seggellion.britannia_mod.config.ModConfig;
-import com.seggellion.britannia_mod.util.CityAPITokenData;
+import com.seggellion.britannia_mod.server.auth.RailsRequestAuthenticator;
+import com.seggellion.britannia_mod.server.auth.ServerAuthRegistry;
+import com.seggellion.britannia_mod.server.http.BoundedHttp;
+import com.seggellion.britannia_mod.server.http.RailsApiUrlResolver.Endpoint;
 
 import java.net.HttpURLConnection;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
 import java.util.*;
 
 public final class BlessedItemSyncAPI {
@@ -22,18 +21,17 @@ public final class BlessedItemSyncAPI {
     public record BlessedRow(String itemName, String deedId, boolean used) {}
 
     public static List<BlessedRow> fetch(ServerPlayer player) {
+        HttpURLConnection conn = null;
         try {
-            String urlStr = ModConfig.API_BASE_URL +
-                    "blessed_items?minecraft_uuid=" + player.getStringUUID();
-            HttpURLConnection conn = (HttpURLConnection) new URL(urlStr).openConnection();
+            var requestUri = ServerAuthRegistry.credentials(player.server).orElseThrow().apiUrls()
+                    .resolveQuery(Endpoint.BLESSED_ITEMS,
+                            Map.of("minecraft_uuid", player.getStringUUID()));
+            conn = (HttpURLConnection) requestUri.toURL().openConnection();
+            BoundedHttp.configure(conn);
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Accept", "application/json");
 
-            // optional bearer
-            CityAPITokenData data = CityAPITokenData.getOrCreate(player.serverLevel());
-            if (!data.getApiToken().isEmpty()) {
-                conn.setRequestProperty("Authorization", "Bearer " + data.getApiToken());
-            }
+            if (!RailsRequestAuthenticator.apply(conn, player.server, new byte[0])) throw new IllegalStateException("Server authentication unavailable");
 
             int code = conn.getResponseCode();
             if (code != HttpURLConnection.HTTP_OK) {
@@ -41,22 +39,21 @@ public final class BlessedItemSyncAPI {
                 return List.of();
             }
 
-            try (BufferedReader br = new BufferedReader(
-                    new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
-                JsonArray arr = JsonParser.parseReader(br).getAsJsonArray();
-                List<BlessedRow> rows = new ArrayList<>();
-                for (JsonElement el : arr) {
-                    JsonObject o = el.getAsJsonObject();
-                    rows.add(new BlessedRow(
-                            o.get("item").getAsString(),
-                            o.get("deed_id").getAsString(),
-                            o.get("used").getAsBoolean()));
-                }
-                return rows;
+            JsonArray arr = JsonParser.parseString(BoundedHttp.readUtf8(conn.getInputStream(), 1_048_576)).getAsJsonArray();
+            List<BlessedRow> rows = new ArrayList<>();
+            for (JsonElement el : arr) {
+                JsonObject o = el.getAsJsonObject();
+                rows.add(new BlessedRow(
+                        o.get("item").getAsString(),
+                        o.get("deed_id").getAsString(),
+                        o.get("used").getAsBoolean()));
             }
+            return rows;
         } catch (Exception e) {
             LOGGER.error("Unable to fetch blessed items for {}", player.getName().getString(), e);
             return List.of();
+        } finally {
+            if (conn != null) conn.disconnect();
         }
     }
 }
